# tg_bot_aiogram3

./: .env.dev  .env.docker  .env.example  .env.save  .gitignore  Dockerfile  bot.py  channel_tracker_bot.py  docker-compose.yaml  main.py  pyproject.toml  utils.py
alembic/: env.py
app/: definitions.py  global_const.py  main.py  utils.py  utils_module.py
app/api/: deps.py
core/: config.py  sphere_config.py
crud/: __init__.py  base.py  crud_blog.py  crud_depth.py  crud_group.py  crud_invoice.py  crud_media.py  crud_media_group.py  crud_post.py  crud_practise.py  crud_sphere.py  crud_sphere_user.py  crud_user.py  crud_web_payment.py  crud_web_user.py
data/: config.py
db/: __init__.py  base.py  base_class.py  session.py
docs/: bot_config.txt  channels.txt  db_sql.txt  ukassa.txt
filters/: admin.py
handlers/: __init__.py
keyboards/: __init__.py  set_menu.py
lexicon/: lexicon_ru.py
middlewares/: db.py  message_logger.py  throttling.py
models/: __init__.py  blog.py  group.py  media.py  media_group.py  post.py  practise.py  sphere.py  user.py  web_payment.py  web_user.py
schemas/: __init__.py  blog.py  depth.py  group.py  invoice.py  media.py  media_group.py  msg.py  post.py  practise.py  sphere.py  sphere_user.py  user.py  user_payment.py  web_payment.py  web_user.py  webappdata.py
states/: admin.py  group.py  user.py
tests/: test.py
utils/: __init__.py  bot_instance.py  constants.py  db_utils.py  handler.py  invoice.py  logger.py  logging.py  message_logger.py  payment_tracker.py  text_decorator.py
web_handlers/: tg_updates.py
(+39 files in other folders)
